# progress-report-bot

./: Cargo.toml  writeup.md
migrations/: 20251029212556_create_rank_table.sql  20251029220924_fix_role_id_name.sql  20251029221347_positive_check_constraint.sql  20251029221856_not_null_word_count.sql  20251030204058_unique_word_count_check.sql
src/: commands.rs  core.rs  lib.rs  main.rs  rank.rs  word_count.rs
src/mock/: mod.rs
