[package]
name = "progress-report-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.28"
poise = "0.6.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "test-roles"
