[package]
name = "progress-report-bot"
version = "0.1.0"
edition = "2024"
default-run = "progress-report-bot"


[dependencies]
anyhow = "1.0.100"
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
getset = "0.1.6"
log = "0.4.28"
poise = "0.6.1"
sqlx = { version = "0.8.6", features = ["chrono", "derive", "macros", "postgres", "runtime-tokio"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "test-roles"

[[bin]]
name = "progress-report-bot"
